--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,34 +11,32 @@ concurrency:
 
 jobs:
   lint:
-    name: ⬣ ESLint, ʦ TypeScript, 💅 Prettier, and 🃏 Test
+    name: ⬣ ESLint, 🔎 TypeScript, 💅 Prettier, and 🏗️ Build
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v4
-
-      - name: 🤌 Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
+        uses: actions/checkout@v2
 
       - name: ⎔ Setup node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'yarn'
 
       - name: 📥 Download deps
-        run: pnpm install --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: 🔬 Lint
-        run: pnpm run lint:strict
+        run: yarn lint:strict
 
       - name: 🔎 Type check
-        run: pnpm run typecheck
+        run: yarn typecheck
 
       - name: 💅 Prettier check
-        run: pnpm run format:check
+        run: yarn format:check
 
-      - name: 🃏 Run jest
-        run: pnpm run test
+      - name: 🏗️ Build check
+        run: yarn build
+
+      # - name: 🃏 Run jest
+      #   run: yarn test
