--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.438.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
