--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -41,6 +42,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "next": "^14.2.23",
+    "nuqs": "^2.4.1",
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
